--- a/package.json
+++ b/package.json
@@ -175,7 +175,8 @@
     "yauzl": "^2.10.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cy:test": "cypress run"
   },
   "author": "Felipe Ferreira Pinto",
   "license": "MIT"
